# bitwarden-hw-key

./: Cargo.toml  README.md  WIP.md
.cargo/: config.toml
src/: esp_input.rs  main.rs  view.rs
src/gui/: README.md  icons.rs  mod.rs
src/gui/document/: document.rs  mod.rs  node.rs  utils.rs
src/gui/input/: mod.rs
src/gui/layout/: layout_box.rs  layout_tree.rs  mod.rs  style_tree.rs  styles.rs
src/gui/primitives/: mod.rs
src/gui/render/: canvas.rs  commands.rs  drawable.rs  image_buffer.rs  mod.rs  solid_color.rs  text.rs
src/gui/style/: font.rs  mod.rs  style_tree.rs  styled_node.rs  styles.rs
src/time/: timer.rs
