[package]
name = "bitwarden-hw-key"
version = "0.1.0"
authors = ["Andreas Coroiu <andreas.coroiu@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43.1"
ssd1306 = "0.8.4"
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
once_cell = "1.19.0"
button-driver = { version = "0.1.4", features = ["esp", "std"] }

[build-dependencies]
embuild = "0.31.3"
